opencli-rs/tui/src/snapshots/opencli_tui__history_cell__tests__coalesced_reads_dedupe_names.snap
---
source: tui/src/history_cell.rs
expression: rendered
---
⏺ Inspected
  ⎿ Viewed auth.rs, shimmer.rs
