opencli-rs/tui/src/snapshots/opencli_tui__history_cell__tests__coalesces_reads_across_multiple_calls.snap
---
source: tui/src/history_cell.rs
expression: rendered
---
⏺ Inspected
  ⎿ Searched shimmer_spans
    Viewed shimmer.rs, status_indicator_widget.rs
