opencli-rs/tui/src/snapshots/opencli_tui__history_cell__tests__coalesces_sequential_reads_within_one_call.snap
---
source: tui/src/history_cell.rs
expression: rendered
---
⏺ Inspected
  ⎿ Searched shimmer_spans
    Viewed shimmer.rs
    Viewed status_indicator_widget.rs
