opencli-rs/tui/src/snapshots/opencli_tui__history_cell__tests__multiline_command_both_lines_wrap_with_correct_prefixes.snap
---
source: tui/src/history_cell.rs
expression: rendered
---
╭─ ⏺ Executed ─────────────╮
│ first_token_is_long_enou │
│ gh_to_wrap               │
│ second_token_is_also_lon │
│ … +1 lines               │
├──────────────────────────┤
│ (no output)              │
╰──────────────────────────╯
