opencli-rs/tui/src/snapshots/opencli_tui__history_cell__tests__multiline_command_without_wrap_uses_branch_then_eight_spaces.snap
---
source: tui/src/history_cell.rs
expression: rendered
---
╭─ ⏺ Executed ─────────────────────────────────────────────────────────────────╮
│ echo one                                                                     │
│ echo two                                                                     │
├──────────────────────────────────────────────────────────────────────────────┤
│ (no output)                                                                  │
╰──────────────────────────────────────────────────────────────────────────────╯
